--- a/index.html
+++ b/index.html
@@ -1,51 +1,107 @@
-<!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula</title>
-    <script src="https://kit.fontawesome.com/bd5b44309d.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/syle.css">
-    
-
-</head>
-<body>
+    <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+        src="https://kit.fontawesome.com/9a6e423e34.js"
+        crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/syle.css" />
+    <title>Portifolio</title>
+    </head>
+    <body>
     <header>
         <nav>
-            <ul>
-                <li><a href="#">blogs</a></li>
-                <li><a href="#">work</a></li>
-                <li><a href="#">conta</a></li>
-            </ul>
+        <ul>
+            <li><a href="index.html">Blog</a></li>
+            <li><a href="featwork.html">Works</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
         </nav>
     </header>
+
     <main>
         <section id="banner" class="banner">
-            <img id="face" src="image/Ellipse 1.png" alt="face">
-            <h1>Hi, I am John,
-                Creative Technologist</h1>
-                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-
-               <p> <button>Download Resume</button> </p>
+        <div class="imagem">
+            <img src="image/Ellipse 1.png" alt="" />
+        </div>
+        <div>
+            <h1>Hi, I am John, Creative Technologist</h1>
+            <p>
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit. Exercitation
+            veniam consequat sunt nostrud amet.
+            </p>
+            <div>
+            <button>Download Resume</button>
+            </div>
+        </div>
         </section>
-        <section id="posts" class="posts">
-            <h2>Recent posts</h2>
-            <ul><li>
-                <h3>Making a design system from scratch</h3>
-                <p>12 Feb 2020 | Design, Pattern</p>
-                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-
-                </li>
-                <li>
-                    <h3>Creating pixel perfect icons in Figma</h3>
-                    <p>12 Feb 2020 | Design, Pattern</p>
-                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-
-                </li>
-            </ul>
+        <section class="posts">
+        <h2>Recent Posts</h2>
+        <ul>
+            <li>
+            <h3>Making a design system from scratch</h3>
+            <p>12 Feb 2020 | Design, Pattern</p>
+            <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+                Exercitation veniam consequat sunt nostrud amet.
+            </p>
+            </li>
+            <li>
+            <h3>Creating pixel perfect icons in Figma</h3>
+            <p>12 Feb 2020 | Design, Pattern</p>
+            <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+                Exercitation veniam consequat sunt nostrud amet.
+            </p>
+            </li>
+        </ul>
+        </section>
+        <section class="works">
+        <h2>Featured Works</h2>
+        <ul>
+            <li>
+            <img src="image/Rectangle 30.png" alt="" />
+            <h3>Designing Dashboards</h3>
+            <p class="info">
+                <span>2020</span>
+                Dashboard
+            </p>
+            <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+                Exercitation veniam consequat sunt nostrud amet.
+            </p>
+            </li>
+            <li>
+            <img src="image/Rectangle 32.png" alt="" />
+            <h3>Designing Dashboards</h3>
+            <p class="info">
+                <span>2020</span>
+                Dashboard
+            </p>
+            <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+                Exercitation veniam consequat sunt nostrud amet.
+            </p>
+            </li>
+        </ul>
         </section>
     </main>
-    
-</body>
+
+    <footer>
+        <p class="social">
+        <a href="" class="fa-brands fa-square-facebook"></a>
+        <a href="" class="fa-brands fa-instagram"></a>
+        <a href="" class="fa-brands fa-twitter"></a>
+        <a href="" class="fa-brands fa-linkedin"></a>
+        </p>
+        <p>Copyright &copy;2020 All rights reserved</p>
+    </footer>
+    </body>
 </html>
